<resources>
    <string name="app_name">Nongpreaw Coffee</string>

    <string name="orderWaiting">รอคิว</string>
    <string name="orderCooking">กำลังทำ</string>
    <string name="orderShipping">กำลังจัดส่ง</string>
    <string name="orderSuccess">ส่งสำเร็จ</string>
    <string name="orderCancel">ยกเลิก</string>
    <string name="label_cancel_order">
        <u>ยกเลิกรายการ</u>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
