<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/btnMap"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_map" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:visibility="gone">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/layoutDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RadioGroup
                    android:id="@+id/groupStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <RadioButton
                        android:id="@+id/btnOrderWaiting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_order_status"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/orderWaiting" />

                    <RadioButton
                        android:id="@+id/btnOrderCooking"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_order_status"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/orderCooking" />

                    <RadioButton
                        android:id="@+id/btnOrderShipping"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_order_status"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/orderShipping" />

                    <RadioButton
                        android:id="@+id/btnOrderSuccess"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_order_status"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/orderSuccess" />

                    <RadioButton
                        android:id="@+id/btnOrderCancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_order_status"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/orderCancel" />

                </RadioGroup>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvCustomerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="ชื่อผู้รับ"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutCustomerName"
                    style="@style/Widget.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtCustomerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_background"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvCustomerPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="เบอร์ติดต่อ"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutCustomerPhone"
                        style="@style/Widget.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/btnCall"
                        android:focusableInTouchMode="true"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtCustomerPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_field_background"
                            android:drawablePadding="8dp"
                            android:focusable="false"
                            android:inputType="phone"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/ic_phone" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvCustomerAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="ที่อยู่"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutCustomerAddress"
                    style="@style/Widget.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtCustomerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_background"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:gravity="start"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvCustomerLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="ตำแหน่ง"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutCustomerLocation"
                    style="@style/Widget.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtCustomerLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_background"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:hint="Lat, Lng"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_dark"
                        android:padding="8dp"
                        android:text="รายชื่อสินค้า"
                        android:textColor="@android:color/black" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvCart"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:overScrollMode="never" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNetPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="ราคารวม"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="(บาท)"
                        android:textSize="12dp" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutNetPrice"
                    style="@style/Widget.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusableInTouchMode="true"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtNetPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_background"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>